# MekaHimeArchD

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
.agents/rules/: code-guide.md
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
archive/src/bridge/: audio_bridge.cpp
archive/src/core/: engine.py  models.py
archive/src/database/: manager.py  schema.sql
client/: CMakeLists.txt
client/src/: main.cpp
pretrained_models/sepformer-wsj02mix/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
scripts/: export_onnx.py  quantize_models.py  test_pipeline.py
server/: amika_server.py  echo_server.py  requirements.txt  speaker_library.py
src/bridge/: CMakeLists.txt  audio_bridge.cpp  audio_bridge.py
src/core/: asr.py  engine.py  models.py  state_machine.py  vad.py
src/database/: manager.py  schema.sql
src/server/: app.py
