[build-system]
requires = ["scikit-build-core>=0.9.0", "nanobind>=1.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "amikas_ears"
version = "0.1.0"
description = "High-performance live audio diarization and separation engine"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT"}
dependencies = [
    "granian>=1.2.0",
    "nanobind>=1.9.0",
    "onnxruntime-gpu>=1.17.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "speechbrain>=1.1.0",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "fastapi>=0.136.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.21.1.3",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "scipy>=1.15.3",
    "deepfilternet>=0.5.6",
]

[tool.scikit-build]
wheel.packages = ["src/amikas_ears"]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
