[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amikas_ears"
version = "0.1.0"
description = "High-performance live audio diarization and separation engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "granian>=1.2.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.5.0",
    "fastapi>=0.115.0",
    "scipy>=1.13.0",
    # ONNX Runtime — CPU by default (no NVIDIA proprietary software).
    # For GPU acceleration, install onnxruntime-gpu manually:
    #   pip install onnxruntime-gpu
    "onnxruntime>=1.17.0",
    "faster-whisper>=1.2.1",
    "onnxconverter-common>=1.16.0",
    "python-speech-features>=0.6",
    "onnxruntime-directml>=1.24.3",
]

[project.optional-dependencies]
# Export tools — only needed when exporting models to ONNX, NOT for production inference
export = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "speechbrain>=1.0.0",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
]
# GPU inference — install ONNX Runtime with CUDA support
gpu = [
    "onnxruntime-gpu>=1.17.0",
]
# C++ bridge build dependencies
bridge = [
    "nanobind>=1.9.0",
    "scikit-build-core>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
